SigmaCodebackup3rdSep/objects/Integration_Logging__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Integration_Logs_Purge_Days__c</fullName>
        <label>Integration Logs Purge Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logging_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Logging Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_Load_Max__c</fullName>
        <label>Pay Load Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Logging</label>
</CustomObject>